--- a/sass/components/_companies.scss
+++ b/sass/components/_companies.scss
@@ -2,15 +2,26 @@
   width: auto;
   padding-top: 60px;
   padding-bottom: 60px;
-  /*width: $width-container;*/
   margin: auto;
   list-style: none;
+  @media (min-width: 1200px) {
+    max-width: 1200px;
+    margin: auto;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   &__display {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     padding-right: 15px;
     padding-left: 15px;
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (min-width: 1200px) {
+      grid-template-columns: repeat(6, 1fr);
+    }
   }
   &__heading {
     font-family: $fontFamily-roboto;
@@ -41,18 +52,5 @@
     fill: $color-main;
     color: $color-main;
     border: 1px solid $color-main;
-  }
-}
-
-@media (min-width: 480px) {
-  .companies__display {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-@media (min-width: 768px) {
-  .companies__display {
-    grid-template-columns: repeat(6, 1fr);
-    padding-right: 13.41%;
-    padding-left: 13.41%;
   }
 }
