--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -15,8 +15,13 @@
     font-style: normal;
   }
   &__container {
-    /*width: $width-container;*/
     margin: auto;
+    @media (min-width: 1200px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      max-width: 1200px;
+      margin: auto;
+    }
   }
   &__padding {
     padding-bottom: 8px;
@@ -29,6 +34,9 @@
     align-items: baseline;
     padding-bottom: 20px;
     color: $color-neutral;
+    @media (min-width: 1200px) {
+      justify-content: left;
+    }
     &__style {
       font-weight: $fontWeight-big;
       font-size: 0.875rem;
@@ -38,6 +46,19 @@
       padding-top: 60px;
       padding-bottom: 20px;
       text-align: center;
+      @media (min-width: 1200px) {
+        padding-top: 0px;
+        text-align: left;
+      }
+      @media (min-width: 768px) {
+        padding-top: 0px;
+      }
+    }
+  }
+  &__news {
+    @media (min-width: 1200px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
   &__logo-color {
@@ -47,6 +68,9 @@
     & li {
       display: flex;
       justify-content: center;
+      @media (min-width: 1200px) {
+        justify-content: left;
+      }
     }
     & a {
       font-size: 0.875rem;
@@ -54,15 +78,27 @@
       letter-spacing: 0.03em;
       color: $color-adress;
     }
-  } /*
-  &__display {
-    display: flex;
-  }*/
+  }
   &__imput {
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
+    @media (min-width: 1200px) {
+      padding: 0px;
+    }
+  }
+  &__email-center {
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+    }
+  }
+  &__ul-position {
+    @media (min-width: 1200px) {
+      padding-top: 30px;
+      padding-left: 12px;
+    }
   }
   &__email-style {
     width: 100%;
@@ -75,14 +111,32 @@
     font-size: 1rem;
     line-height: 1.25rem;
     color: $color-adress;
+    @media (min-width: 768px) {
+      width: 450px;
+    }
   }
   &__email-input {
     padding-left: 64px;
     padding-right: 12px;
   }
+  &__grid {
+    @media (min-width: 768px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
 .find-us-icons {
   text-align: center;
+  @media (min-width: 1200px) {
+    text-align: left;
+  }
+  &--padding {
+    @media (min-width: 1200px) {
+      padding-top: 30px;
+      padding-left: 12px;
+    }
+  }
   &__style {
     display: inline-block;
     padding: 12px 12px 12px 12px;
@@ -101,50 +155,5 @@
       background-color: $color-main;
       border-radius: 50%;
     }
-  }
-}
-@media (min-width: 480px) {
-  .footer__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .footer__join-us__style--padding {
-    padding-top: 0px;
-  }
-  .footer__imput {
-    padding-left: 21.6%;
-    padding-right: 21.6%;
-  }
-}
-@media (min-width: 768px) {
-  .footer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-right: 13.41%;
-    padding-left: 13.41%;
-  }
-  .footer__join-us {
-    justify-content: left;
-  }
-  .footer__join-us__style {
-    padding-top: 0px;
-    text-align: left;
-  }
-  .footer__news {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .find-us-icons {
-    text-align: left;
-  }
-  .find-us-icon--padding {
-    padding-top: 30px;
-    padding-left: 12px;
-  }
-  .footer__imput {
-    padding: 0px;
-  }
-  .footer__address li {
-    justify-content: left;
   }
 }
