--- a/sass/components/_info.scss
+++ b/sass/components/_info.scss
@@ -2,10 +2,10 @@
   margin: auto;
   padding-top: 60px;
   padding-bottom: 60px;
-  /*
-  padding-top: 94px;
-  padding-bottom: 94px;
-  */
+  @media (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   & h3 {
     font-size: 0.875rem;
     line-height: 1rem;
@@ -29,6 +29,15 @@
     list-style: none;
     margin-left: 15px;
     margin-right: 15px;
+    @media (min-width: 768px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (min-width: 1200px) {
+      grid-template-columns: repeat(4, 1fr);
+      max-width: 1200px;
+      margin: auto;
+    }
     & li {
       display: flex;
       flex-wrap: wrap;
@@ -44,18 +53,5 @@
     padding-bottom: 25px;
     border-radius: 4px;
     margin-bottom: 30px;
-  }
-}
-@media (min-width: 480px) {
-  .info-section__list-style {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (min-width: 768px) {
-  .info-section__list-style {
-    grid-template-columns: repeat(4, 1fr);
-    padding-right: 13.41%;
-    padding-left: 13.41%;
   }
 }
