--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -75,8 +75,11 @@
     line-height: 2.9rem;
     display: block;
     padding-bottom: 4%;
-    color: black;
+    color: rgb(0, 0, 0);
     text-decoration: none;
+  }
+  & .link__on-site {
+    color: $color-main;
   }
 }
 .logo--padding a {
@@ -95,7 +98,7 @@
   margin-top: 32px;
   margin-bottom: 64px;
 }
-@media (min-width: 480px) {
+@media (min-width: 768px) {
   .mobile-list {
     display: none;
   }
