--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -3,7 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+html {
+  font-size: 16px;
+}
 ul {
   margin-block-start: 0em;
   margin-block-end: 0em;
