--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -50,6 +50,7 @@
   &__btn-place {
     display: flex;
     justify-content: center;
+    padding-bottom: 40px;
   }
   &__btn-close {
     position: absolute;
